lexer/src/snapshots/lexer__tests__edge_cases-11.snap
---
source: src/lexer.rs
expression: "scan_one(\"[(])\")"
---
Ok(
    [
        OpenBracket,
        OpenParenthesis,
        CloseBracket,
        CloseParenthesis,
    ],
)
