lexer/src/snapshots/lexer__tests__edge_cases-13.snap
---
source: src/lexer.rs
expression: "scan_one(\"\\\"Hello\\\\nWorld\\\"\")"
---
Ok(
    [
        DoubleQuote,
        Litteral(
            "Hello\\nWorld",
        ),
        DoubleQuote,
    ],
)
