lexer/src/snapshots/lexer__tests__edge_cases-14.snap
---
source: src/lexer.rs
expression: "scan_one(\"00123\")"
---
Ok(
    [
        Numeric(
            [
                0,
                0,
                1,
                2,
                3,
            ],
        ),
    ],
)
