lexer/src/snapshots/lexer__tests__edge_cases-17.snap
---
source: src/lexer.rs
expression: "scan_one(\"12345678901234567890\")"
---
Ok(
    [
        Numeric(
            [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
                9,
                0,
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
                9,
                0,
            ],
        ),
    ],
)
