lexer/src/snapshots/lexer__tests__edge_cases-4.snap
---
source: src/lexer.rs
expression: "scan_one(\"\\n\\n\\n\")"
---
Ok(
    [
        NewLine,
        NewLine,
        NewLine,
    ],
)
