lexer/src/snapshots/lexer__tests__literal_tokens-3.snap
---
source: src/lexer.rs
expression: "scan_one(\"foo bar\")"
---
Ok(
    [
        Litteral(
            "foo",
        ),
        Space,
        Litteral(
            "bar",
        ),
    ],
)
