lexer/src/snapshots/lexer__tests__numeric_tokens-3.snap
---
source: src/lexer.rs
expression: "scan_one(\"0\")"
---
Ok(
    [
        Numeric(
            [
                0,
            ],
        ),
    ],
)
