lexer/src/snapshots/lexer__tests__numeric_tokens.snap
---
source: src/lexer.rs
expression: "scan_one(\"123\")"
---
Ok(
    [
        Numeric(
            [
                1,
                2,
                3,
            ],
        ),
    ],
)
