lexer/src/snapshots/lexer__tests__single_character_tokens-10.snap
---
source: src/lexer.rs
expression: "scan_one(\"\\\"\")"
---
Ok(
    [
        DoubleQuote,
    ],
)
